<resources>
    <string name="app_name">film</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="share">Share</string>
    <string name="text_share">Film : %1$s, \n\nOverview : \n%2$s</string>

    <string name="title">Title</string>S
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imagepreview">imagePreview</string>
</resources>